v1.5/community-and-governance/obol-token/token-utility.md
# Token Utility

## **Governance**

OBOL Token holders delegate their voting power to delegates who participate in the Token House decision-making processes. This includes voting on proposals affecting the Obol Collective’s direction, upgrades, and funding allocations. Read more about the Token House [here](../governance/token-house.md).

## **Obol Retroactive Funding (RAF)**

Token holders delegate their voting power to Delegates, who vote on the projects eligible for retroactive funding. Read more about the Obol RAF [here](../governance/raf/).

## **OBOL Token Staking**

As per[ OIP-1](https://community.obol.org/t/oip-1-building-and-enabling-staking-for-the-obol-token/312), OBOL token holders will have the opportunity to stake their tokens, contributing to the security and stability of the Collective by preserving governance while earning rewards and being able to engage in DeFi. Staking involves depositing OBOL tokens in a vault (without lockup) that automatically delegates the Tokens if not done already. In return, stakers receive stOBOL, which automatically accrues OBOL Tokens as rewards as it's price vs OBOL increases.

This staking program will be implemented in phases, allowing the community to gradually engage in and benefit from the system while reinforcing the decentralization of the Obol Collective. For the first six months, the total rewards will be 0.33% of the total supply, providing early participants with attractive rewards. After this period, the staking rewards may be adjusted based on governance proposals and market conditions. This structured rollout ensures a sustainable and rewarding staking experience while reinforcing the decentralization of the Obol Collective.

To get started, simply visit [https://stake.obol.org](https://stake.obol.org) and follow the staking flow — no technical setup required. The interface will guide you through selecting your wallet, choosing the amount to stake, and submitting the transaction.

**You will find more info about the OBOL token staking in the dedicated** [staking-and-stobol.md](staking-and-stobol.md "mention") **section.**

## **DeFi**

Plans are in place to launch several DeFi avenues for the OBOL Token post-TGE, such as liquidity pools, lending protocols (e.g. Morpho) and restaking (e.g. Eigenlayer, Symbiotic).

### Pendle Integration for stOBOL

_Note: The Pendle integration is not yet live. It is expected to go live in the first half of August 2025. This information is provided in advance for community awareness._

stOBOL is supported on [Pendle Finance](https://app.pendle.finance), enabling users to access advanced yield strategies with their staked OBOL.&#x20;

Through Pendle, users can isolate and trade the future yield of stOBOL by buying or selling its **Principal Tokens (PT)** and **Yield Tokens (YT)**.&#x20;

This opens up new opportunities: holders can lock in fixed yield by purchasing PTs, speculate on rising yield by acquiring YTs, or passively earn through **liquidity provision**, which offers exposure to swap fees and additional PENDLE incentives. Importantly, Pendle pools are **permissionless**, and while the Obol Association has provided initial liquidity to bootstrap the market, anyone can contribute. \
\
For more details, refer to the [Pendle Academy](https://pendle.gitbook.io/pendle-academy) and [stOBOL pool on Pendle](https://app.pendle.finance/trade).

## **More Utility Coming Soon**

Via Token House governance proposals in the [Governance Forum](https://community.obol.org/), the Obol community can add more functionality and utility to the OBOL Token.
